1.4
	+ Bug fix: i18n
1.3.14
	+ Added multi-gateway support for DHCP and PPPoE
	+ Add an allow rule by default from internal
	  networks to internet
1.3.11
	+ Added report support
	+ Add description field for redirects
	+ Breadcrumbs
	+ Change Redirections for Port Forwarding
1.3.6
	+ Add clone() to EBox::Firewall::IptablesRule
1.3.4
	+ bugfix: inospoof chain was buggy and didn't allow traffic
	  to internal eBox addresses from other internal networks
	+ bugfix: insert missing port data using NULL in logs data base
1.1.30
	+ Add all and ah protocols to redirections
1.1.20
	+ New release
1.1.10
	+ New release
1.1
	+ Added required output rules to connect remote services when the
	eBox is subscribed
	+ Use the new ids() and row() API
	+ Added support to redirects to introduce the origin destination address.
	  So far, only local address could be used.
	+ Bugfix: fix regression that didn't allow to use virtual interfaces on
	redirections
	+ Allow outgoing connections from eBox by default
0.12.101
	+ Bugfix: Add redirect migration script to Makefile.am
0.12.100
	+ New release
0.12.99
	+ Add support for reporting 
	+ Add rules to allow DHCP requests from interfaces configured via DHCP
0.12.1
	+ Add log decision to firewall rules
	+ Add conf parameter to disable NAT
0.12
	+ Use the new EBox::Model::Row api
	+ Add help field to firewall models
	+ Bugfix. Use exit and not return in dchp-firewall external script
	+ Bugfix. Use #DEBHELPER# properly to be able to flush the firewall rules
	  when the package is uninstalled
	+ Add support for ESP protocol
0.11.102
	+ Set editable attribute to 1 in Decision field. To comply with
	  what the type expects and avoid warnings
0.11.101
	+ Unroll inoexternal chain
	+ Bugfix. Do not restart firewall module if called from dhcp context
	  and the module is not enabled
	+ Add setExternalService
0.11.100
	+ Fix English string
	+ onInstall() functionality moved to migration script
0.11.99