@@ -15,11 +15,14 @@
 #
 # key = value # this is ignored
 
-# Limit of logged packets per minute. 
-iptables_log_limit = 50 
+# Limit of logged packets per minute.
+iptables_log_limit = 50
 
-# Burst 
+# Burst
 iptables_log_burst = 10
+
+# Logs all the drops
+iptables_log_drops = yes
 
 # Enable source NAT, if your router does NAT you can disable it
 nat_enabled = yes
