@@ -1,3 +1,5 @@
+HEAD
+	+ Add a config option to disable the logging of dropped packets in firewall
 1.4
 	+ Bug fix: i18n
 1.3.14
